--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
     "name": "qr-scanner",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://AndrewTotsky.github.io/my-github-pages-app",
+    "homepage": "https://andrewtotsky.github.io/pech.github.io",
     "dependencies": {
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^13.5.0",
+        "axios": "^1.8.4",
+        "fs": "^0.0.1-security",
+        "jsqr": "^1.4.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-scripts": "5.0.1",
+        "react-webcam": "^7.2.0",
+        "util": "^0.12.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
